Deleted Intern component, Added mark-data for paper, project., placement

--- a/src/app/pages/activity/paper/paper.component.html
+++ b/src/app/pages/activity/paper/paper.component.html
@@ -39,7 +39,7 @@
         </label>
         <p-dropdown
           formControlName="type"
-          [options]="data"
+          [options]="type"
           [showClear]="true"
           id="venue"
         ></p-dropdown>
