--- a/src/app/pages/activity/placement/placement.component.html
+++ b/src/app/pages/activity/placement/placement.component.html
@@ -30,10 +30,12 @@
           Placed Type
         </label>
         <p-dropdown
+          placeholder="Select the type of placement"
           formControlName="placedType"
-          [options]="data"
+          [options]="placedType"
           [showClear]="true"
           id="placedType"
+          (onChange)="onPositionChange($event)"
         ></p-dropdown>
       </div>
       <div class="field mb-4 col-12 md:col-6">
@@ -45,9 +47,9 @@
           inputId="dateformat"
         ></p-calendar>
       </div>
-      <div class="field mb-4 col-12 md:col-6">
+      <div class="field mb-4 col-12 md:col-6" *ngIf="notPlaced">
         <label for="roundsShortListed" class="font-medium text-900">
-          Number of rounds shortlisted
+          Number of rounds cleared
         </label>
         <p-inputNumber
           formControlName="roundsShortListed"
