--- a/src/app/pages/activity/ncc-nss/ncc-nss.component.html
+++ b/src/app/pages/activity/ncc-nss/ncc-nss.component.html
@@ -1,6 +1,6 @@
 <section class="mt-8">
   <div class="surface-card p-4">
-    <form [formGroup]=""nccForm class="grid formgrid p-fluid">
+    <form [formGroup]="nccForm" class="grid formgrid p-fluid">
       <div class="field mb-4 col-6">
         <label for="eventName" class="font-medium text-900">Event Name</label>
         <input
