Added mark - data for techno managerial

--- a/src/app/pages/activity/ncc-nss/ncc-nss.component.html
+++ b/src/app/pages/activity/ncc-nss/ncc-nss.component.html
@@ -44,7 +44,7 @@
           [showClear]="true"
           id="depatment"
           (onChange)="onChange($event)"
-          formControlName="position"
+          formControlName="campRange"
         ></p-dropdown>
       </div>
       <div class="field mb-4 col-12 md:col-6">
