Added Placeholder for the dropdowns

--- a/src/app/pages/activity/paper/paper.component.html
+++ b/src/app/pages/activity/paper/paper.component.html
@@ -41,6 +41,7 @@
           formControlName="type"
           [options]="type"
           [showClear]="true"
+          placeholder="Type"
           id="venue"
         ></p-dropdown>
       </div>
@@ -59,6 +60,7 @@
           [options]="availableModes"
           [showClear]="true"
           formControlName="mode"
+          placeholder="Select Event Mode"
           id="eventMode"
         ></p-dropdown>
       </div>
