--- a/src/app/pages/activity/project/project.component.html
+++ b/src/app/pages/activity/project/project.component.html
@@ -41,6 +41,7 @@
           formControlName="type"
           [options]="type"
           [showClear]="true"
+          placeholder="Type"
           id="venue"
         ></p-dropdown>
       </div>
@@ -60,6 +61,7 @@
           [showClear]="true"
           formControlName="mode"
           id="eventMode"
+          placeholder="Event Mode"
         ></p-dropdown>
       </div>
       <div class="field mb-4 col-12 md:col-6">
