--- a/src/app/pages/activity/techno-managerial/techno-managerial.component.html
+++ b/src/app/pages/activity/techno-managerial/techno-managerial.component.html
@@ -32,6 +32,7 @@
           [options]="type"
           [showClear]="true"
           id="mode"
+          placeholder="Select event type"
         ></p-dropdown>
       </div>
       <div class="field mb-4 col-12 md:col-6">
