--- a/src/app/pages/activity/vac/vac.component.html
+++ b/src/app/pages/activity/vac/vac.component.html
@@ -30,6 +30,7 @@
           [showClear]="true"
           id="courseMode"
           formControlName="mode"
+          placeholder="Select Course Mode"
         ></p-dropdown>
       </div>
       <div class="field mb-4 col-12 md:col-6">
