--- a/src/app/pages/activity/project-paper/project-paper.component.html
+++ b/src/app/pages/activity/project-paper/project-paper.component.html
@@ -43,6 +43,7 @@
           Published In
         </label>
         <p-dropdown
+          placeholder="Published In"
           [options]="availablePublishment"
           [showClear]="true"
           id="publishedIn"
