Changed image upload for all components

--- a/src/app/pages/activity/club/club.component.html
+++ b/src/app/pages/activity/club/club.component.html
@@ -2,7 +2,9 @@
   <div class="surface-card p-4">
     <form [formGroup]="clubForm" class="grid formgrid p-fluid">
       <div class="field mb-4 col-12">
-        <label for="club_name" class="font-medium text-900"> Club Name or Leadership Type </label>
+        <label for="club_name" class="font-medium text-900">
+          Club Name or Leadership Type
+        </label>
         <input
           id="club_name"
           type="text"
@@ -42,12 +44,13 @@
           name="demo"
           accept="image/*"
           maxFileSize="2000000"
-          (onUpload)="onImageUpload($event)"
-          class="mr-3"
+          customUpload="true"
+          (uploadHandler)="onImageUpload($event)"
           [auto]="true"
           chooseLabel="Upload Proof"
+          class="mr-2"
         ></p-fileUpload>
-        <img *ngIf="imageDisplay" [src]="imageDisplay" alt="Proof" />
+        <img *ngIf="imageDisplay" [width]="150" [src]="imageDisplay" alt="Proof" />
       </div>
       <div class="surface-border border-top-3 opacity-50 mb-3 col-12"></div>
       <div class="col-12 flex justify-content-center">
