--- a/src/app/pages/activity/techno-managerial/techno-managerial.component.html
+++ b/src/app/pages/activity/techno-managerial/techno-managerial.component.html
@@ -55,7 +55,7 @@
           (onChange)="onLevelChange($event)"
         ></p-dropdown>
       </div>
-      
+
       <div class="field mb-4 col-12 md:col-6" *ngIf="isPrizeWon">
         <label for="eventVenue" class="font-medium text-900">
           Cash Award (If Won)
@@ -94,15 +94,21 @@
         <p-fileUpload
           #fubauto
           mode="basic"
-          name="demo[]"
+          name="demo"
           accept="image/*"
-          maxFileSize="1000000"
-          (onUpload)="onUpload($event)"
+          maxFileSize="2000000"
+          customUpload="true"
+          (uploadHandler)="onImageUpload($event)"
           [auto]="true"
           chooseLabel="Upload Proof"
-          class="mr-3"
+          class="mr-2"
         ></p-fileUpload>
-        <img *ngIf="imageDisplay" [src]="imageDisplay" alt="Proof" />
+        <img
+          *ngIf="imageDisplay"
+          [width]="150"
+          [src]="imageDisplay"
+          alt="Proof"
+        />
       </div>
       <div class="surface-border border-top-3 opacity-50 mb-3 col-12"></div>
       <div class="col-12 flex justify-content-center">
