--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -64,7 +64,7 @@
                 <input
                   id="password"
                   type="password"
-                  placeholder="password"
+                  placeholder="Password"
                   pinputtext
                   formControlName="password"
                   class="p-inputtext p-component p-element"
