Added service backend connectivity, modified models

--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -79,7 +79,7 @@
   >
     <div
       class="flex justify-content-center py-3 px-7"
-      *ngIf="mentorDetail?.isAdmin"
+      *ngIf="mentorDetail?.is_admin"
     >
       <div class="button">
         <button
@@ -95,7 +95,7 @@
     </div>
     <div
       class="flex justify-content-around py-3 px-7"
-      *ngIf="!mentorDetail?.isAdmin"
+      *ngIf="!mentorDetail?.is_admin"
     >
       <div class="button">
         <button
