--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,7 +8,7 @@
         height="50"
         class="mb-3"
       />
-      <div class="text-900 text-3xl font-medium mb-3">
+      <div class="text-900 text-3xl font-medium">
         Welcome to the Portal.
       </div>
       <span class="text-600 font-medium line-height-3"
@@ -17,8 +17,9 @@
       <a
         class="font-medium no-underline ml-2 text-blue-500 cursor-pointer"
         routerLink="/signup"
-        >Create now!</a
       >
+        Create now!
+      </a>
     </div>
 
     <div>
@@ -53,7 +54,7 @@
               id="rememberme"
               [binary]="true"
               styleClass="mr-2"
-              name="rememberme"
+              name="remembermMe"
               ngModel
             ></p-checkbox>
             <label for="rememberme">Remember me</label>
