--- a/src/app/component/user/user.component.html
+++ b/src/app/component/user/user.component.html
@@ -11,14 +11,13 @@
               >
                 <div class="flex align-items-start flex-column md:flex-row">
                   <img
-                    src="assets/images/streamlinehq-avatar-neutral-frame-add-users-400.png"
+                    [src]="userDetail?.image"
                     class="mr-5 mb-3 lg:mb-0 border-round-lg"
                     style="width: 80px"
-                    onContextMenu="return false; "
                   />
                   <div class="mt-3">
                     <span class="text-900 font-medium text-3xl">
-                      {{ "userDetail?.name | titlecase" }}
+                      {{ userDetail?.name | titlecase }}
                     </span>
                     <div class="flex align-items-center flex-wrap text-sm">
                       <div class="mr-5 mt-3">
