--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -116,7 +116,7 @@
           label="Add Mentor"
           icon="pi pi-plus"
           class="p-button-raised p-button-success"
-          (click)="openAddAdminDialog()"
+          (click)="openDialog = !openDialog"
         ></button>
       </div>
       <div class="button">
@@ -144,3 +144,88 @@
     </div>
   </div>
 </section>
+
+<!-- Add Admin section -->
+<p-dialog
+  header="You can add admin/mentor here"
+  [(visible)]="openDialog"
+  [modal]="true"
+  [style]="{ width: '35vw' }"
+  [draggable]="false"
+  [resizable]="false"
+>
+  <form [formGroup]="addMentorForm" class="w-8 m-auto mt-4">
+    <div class="grid formgrid p-fluid">
+      <div class="field col-12 mb-4">
+        <p-dropdown
+          [options]="availableDepartments"
+          optionValue="value"
+          placeholder="Select your deparment"
+          optionLabel="label"
+          [showClear]="true"
+          formControlName="department"
+          id="depatment"
+        ></p-dropdown>
+      </div>
+      <div class="field col-12 mb-4">
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+          <input
+            type="text"
+            pInputText
+            formControlName="name"
+            placeholder="Mentor Name"
+            autofocus
+          />
+        </div>
+      </div>
+      <div class="field col-12 mb-4">
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-at"></i></span>
+          <input
+            type="email"
+            pInputText
+            formControlName="email"
+            placeholder="Mentor Mail Address"
+            autofocus
+          />
+        </div>
+      </div>
+      <div class="field col-12 mb-4">
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-eye"></i></span>
+          <input
+            type="password"
+            pInputText
+            formControlName="password"
+            placeholder="Password"
+          />
+        </div>
+      </div>
+      <div class="col-12 mb-4 flex">
+        <h3 class="mb-0 mt-0 mr-2 font-normal">Is Admin</h3>
+        <p-inputSwitch formControlName="isAdmin"></p-inputSwitch>
+      </div>
+    </div>
+  </form>
+  <ng-template pTemplate="footer">
+    <button
+      pButton
+      pRipple
+      [disabled]="addMentorForm.invalid"
+      class="mt-3"
+      (click)="onSubmit()"
+      label="Save"
+      *ngIf="!isLoading"
+    ></button>
+    <p-progressSpinner
+      [style]="{ width: '50px', height: '50px' }"
+      styleClass="custom-spinner"
+      strokeWidth="8"
+      fill="var(--surface-ground)"
+      animationDuration=".5s"
+      class="mt-3"
+      *ngIf="isLoading"
+    ></p-progressSpinner>
+  </ng-template>
+</p-dialog>
