Modified for edit user detail

--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -95,7 +95,7 @@
                   placeholder="Select your mentor"
                   formControlName="mentor"
                   optionLabel="label"
-                  optionValue="label"
+                  optionValue="value"
                   [showClear]="true"
                   [filter]="true"
                   filterBy="label"
