--- a/src/app/component/admin/user-view/user-view.component.html
+++ b/src/app/component/admin/user-view/user-view.component.html
@@ -26,7 +26,7 @@
         <div class="mt-4">
           <span class="text-900 font-medium text-3xl">
             {{ studentDetail?.name | titlecase }}
-            <span class="text-xl">({{ studentDetail?.rollno }})</span>
+            <span class="text-xl">({{ studentDetail?.roll_no }})</span>
           </span>
           <div class="flex align-items-center flex-wrap text-sm">
             <div class="mr-5 mt-3">
