--- a/src/app/pages/activity/activity.component.html
+++ b/src/app/pages/activity/activity.component.html
@@ -27,6 +27,7 @@
                   <a
                     pripple
                     [routerLink]="activity.route"
+                    [queryParams]="{ userId: userId }"
                     routerLinkActive="text-purple-600 border-right-2 border-purple-500 transition-colors transition-duration-150"
                     class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
                   >
