--- a/src/app/component/user/user.component.html
+++ b/src/app/component/user/user.component.html
@@ -22,17 +22,32 @@
                     <div class="flex align-items-center flex-wrap text-sm">
                       <div class="mr-5 mt-3">
                         <span class="font-medium text-500">Total Marks</span>
-                        <div class="text-600 font-semibold mt-1">00</div>
+                        <div class="text-600 font-semibold mt-1">
+                          {{ markDetail?.total }}
+                        </div>
                       </div>
                       <div class="mr-5 mt-3">
                         <span class="font-medium text-500">Marks Obtained</span>
-                        <div class="text-700 font-semibold mt-1">00</div>
+                        <div class="text-700 font-semibold mt-1">
+                          {{ markDetail?.mark }}
+                        </div>
                       </div>
                       <div class="mr-5 mt-3">
                         <span class="font-medium text-500">
                           Marks need for maximum
                         </span>
-                        <div class="text-700 font-semibold mt-1">100</div>
+                        <div
+                          class="text-700 font-semibold mt-1"
+                          *ngIf="!markNeeded"
+                        >
+                          0
+                        </div>
+                        <div
+                          class="text-700 font-semibold mt-1"
+                          *ngIf="markNeeded"
+                        >
+                          {{ totalMark }}
+                        </div>
                       </div>
                     </div>
                   </div>
