--- a/src/app/pages/activity/activity.component.html
+++ b/src/app/pages/activity/activity.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="min-h-screen flex flex-column surface-ground">
   <div class="surface-overlay py-1 px-6 text-center relative lg:static">
     <h2 class="mr-0 lg:mr-6 font-semibold text-xl md:text-3xl">
