--- a/src/app/component/user/user.component.html
+++ b/src/app/component/user/user.component.html
@@ -3,7 +3,7 @@
   <p-card class="shadow-6">
     <div class="block-content">
       <div class="flex relative lg:static surface-ground">
-        <div class="min-h-screen flex flex-column relative flex-auto">
+        <div class="flex flex-column relative flex-auto">
           <div class="flex flex-column flex-auto">
             <div class="surface-section p-2 md:p-5 pb-5">
               <div
