--- a/src/app/pages/view-activity/view-activity.component.html
+++ b/src/app/pages/view-activity/view-activity.component.html
@@ -1,6 +1,7 @@
+<p-toast></p-toast>
 <div class="block-content">
-  <div class="lg:px-8 md:px-6 px-4 py-8 ng-star-inserted">
-    <div class="surface-card p-4 shadow-2 border-round grid grid-nogutter">
+  <div class="lg:px-8 md:px-6 px-4 py-8">
+    <section class="surface-card p-4 shadow-2 border-round grid grid-nogutter">
       <div class="col-12 md:col-7">
         <div class="flex justify-content-between align-items-center">
           <div>
@@ -16,63 +17,49 @@
           </div>
           <div class="mr-8 text-center">
             <div class="font-medium text-2xl text-900 mb-3">
-              {{ "User.Name" }}
+              {{ activityDetial?.uploader_id.name }}
             </div>
             <div class="text-700 mb-5">
-              ( {{ "User.rollno" }} | {{ "User.year" }} )
+              ( {{ activityDetial?.uploader_id.roll_no }} |
+              {{ activityDetial?.uploader_id.year }} )
             </div>
           </div>
         </div>
         <div class="grid grid-nogutter border-top-1 surface-border pt-2">
-          <div class="col-12 md:col-4 p-3">
+          <div class="col-12 md:col-4 p-3" *ngIf="activityDetial?.event_name">
             <div class="text-500 font-medium mb-2">Event Name</div>
-            <div class="text-900">{{ "Elliot Alderson" }}</div>
+            <div class="text-900">{{ activityDetial?.event_name }}</div>
           </div>
-          <div class="col-12 md:col-4 p-3">
+          <div class="col-12 md:col-4 p-3" *ngIf="activityDetial?.club_name">
+            <div class="text-500 font-medium mb-2">Club Name</div>
+            <div class="text-900">{{ activityDetial?.club_name }}</div>
+          </div>
+          <div class="col-12 md:col-4 p-3" *ngIf="activityDetial?.event_venue">
             <div class="text-500 font-medium mb-2">Event Venue</div>
-            <div class="text-900">{{ "Event Venue" }}</div>
+            <div class="text-900">{{ activityDetial?.event_venue }}</div>
+          </div>
+          <div class="col-12 md:col-4 p-3" *ngIf="activityDetial?.position">
+            <div class="text-500 font-medium mb-2">Position</div>
+            <div class="text-900">{{ activityDetial?.position }}</div>
           </div>
           <div class="col-12 md:col-4 p-3">
-            <div class="text-500 font-medium mb-2">Applied Position</div>
-            <div class="text-900">Front-End Developer</div>
+            <div class="text-500 font-medium mb-2">Mark</div>
+            <div class="text-900">{{ activityDetial?.mark }}</div>
           </div>
           <div class="col-12 md:col-4 p-3">
-            <div class="text-500 font-medium mb-2">Salary Expectation</div>
-            <div class="text-900">$150,000</div>
-          </div>
-          <div class="col-12 md:col-4 p-3">
-            <div class="text-500 font-medium mb-2">Event Name</div>
-            <div class="text-900">{{ "Elliot Alderson" }}</div>
-          </div>
-          <div class="col-12 md:col-4 p-3">
-            <div class="text-500 font-medium mb-2">Event Venue</div>
-            <div class="text-900">{{ "Event Venue" }}</div>
-          </div>
-          <div class="col-12 md:col-4 p-3">
-            <div class="text-500 font-medium mb-2">Applied Position</div>
-            <div class="text-900">Front-End Developer</div>
-          </div>
-          <div class="col-12 md:col-4 p-3">
-            <div class="text-500 font-medium mb-2">Salary Expectation</div>
-            <div class="text-900">$150,000</div>
-          </div>
-          <div class="col-12 p-3">
-            <div class="text-500 font-medium mb-2">Bio</div>
-            <div class="text-900 line-height-3">
-              Faucibus pulvinar elementum integer enim neque volutpat ac
-              tincidunt vitae. Commodo odio aenean sed adipiscing diam donec
-              adipiscing tristique. Eget felis eget nunc lobortis mattis aliquam
-              faucibus purus in.
+            <div class="text-500 font-medium mb-2">Uploaded At</div>
+            <div class="text-900">
+              {{ activityDetial?.createdAt | date: "dd-MM-yy hh:mm a" }}
             </div>
           </div>
-          <div class="col-12 p-3">
-            <div class="text-500 font-medium mb-3">Files</div>
+          <div class="col-12 p-3 bottom-0 mt-5">
+            <div class="text-500 font-medium mb-3">Proof Image</div>
             <div
               class="flex md:align-items-center md:justify-content-between border-top-1 surface-border p-3 flex-column md:flex-row"
             >
               <div class="flex align-items-center">
                 <span class="block pi pi-file mr-2"></span>
-                <span class="text-900">resume_en.pdf</span>
+                <span class="text-900">{{ imageName }}</span>
               </div>
               <button
                 pbutton
@@ -100,6 +87,7 @@
                 label="Edit Activity"
                 class="p-button-raised p-button-success mx-2"
                 icon="pi pi-pencil"
+                *ngIf="!activityDetial?.is_locked"
               ></button>
               <button
                 pButton
@@ -108,6 +96,8 @@
                 label="Delete Activity"
                 class="p-button-raised p-button-danger mx-2"
                 icon="pi pi-trash"
+                *ngIf="!activityDetial?.is_locked"
+                (click)="deleteActivity()"
               ></button>
               <button
                 pButton
@@ -116,6 +106,7 @@
                 label="Activity Locked"
                 class="p-button-raised p-button-help mx-2"
                 icon="pi pi-lock"
+                *ngIf="activityDetial?.is_locked"
               ></button>
             </div>
           </div>
@@ -124,11 +115,24 @@
       <div class="col-12 md:col-1"></div>
       <div class="col-12 md:col-4 flex align-items-center">
         <img
-          src="../../../assets/images/test/download.png"
+          [src]="activityDetial?.image"
+          [height]="360"
+          class="block lg:hidden"
+          alt="Certificate"
+        />
+        <img
+          [src]="activityDetial?.image"
           [height]="500"
-          alt=""
+          class="hidden lg:block"
+          alt="Certificate"
         />
       </div>
-    </div>
+    </section>
   </div>
 </div>
+
+<p-confirmDialog
+  [style]="{ width: '30vw' }"
+  [baseZIndex]="10000"
+  rejectButtonStyleClass="p-button-text"
+></p-confirmDialog>
