--- a/src/app/component/admin/user-view/activity-table/activity-table.component.html
+++ b/src/app/component/admin/user-view/activity-table/activity-table.component.html
@@ -15,27 +15,32 @@
     >
       <ng-template pTemplate="header">
         <tr>
-          <th pSortableColumn="name">
-            Name <p-sortIcon field="name"></p-sortIcon>
+          <th>Name</th>
+          <th pSortableColumn="mark">
+            Mark<p-sortIcon field="mark"></p-sortIcon>
           </th>
-          <th>Mark</th>
-          <th>Added On</th>
+          <th pSortableColumn="createdAt">
+            Added On <p-sortIcon field="createdAt"></p-sortIcon>
+          </th>
+          <th>Certificate</th>
           <th></th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-activity>
         <tr>
           <td>
-            {{ activity.eventName | titlecase }}
-            {{ activity.clubName | titlecase }}
-            {{ activity.courseName | titlecase }}
+            {{ activity?.event_name | titlecase }}
+            {{ activity?.club_name | titlecase }}
+            {{ activity?.course_name | titlecase }}
           </td>
-          <td>{{ activity.mark }}</td>
+          <td>{{ activity?.mark }}</td>
           <td>
-            {{ activity.uploadedTime | date: "dd/MM/yy" }}
-            <span class="px-2 font-bold"> - </span>
-            {{ activity.uploadedTime | date: "hh:mm" }}
+            {{ activity.createdAt | date: "dd/MM/yy  hh:mm:ss a" }}
           </td>
+          <td>
+            <img [src]="activity?.image" [height]="50" alt="Certificate" />
+          </td>
+
           <td>
             <button
               pButton
@@ -44,6 +49,7 @@
               icon="pi pi-lock-open"
               class="p-button-rounded p-button-help p-button-outlined mr-3"
               pTooltip="Lock Activity"
+              tooltipPosition="top"
             ></button>
             <button
               pButton
@@ -52,6 +58,7 @@
               icon="pi pi-pencil"
               class="p-button-rounded p-button-success p-button-outlined mr-3"
               pTooltip="Edit Activity"
+              tooltipPosition="top"
             ></button>
             <button
               pButton
@@ -60,6 +67,8 @@
               icon="pi pi-eye"
               class="p-button-rounded p-button-info p-button-outlined mr-3"
               pTooltip="View Activity"
+              tooltipPosition="top"
+              (click)="viewActivity(activity.id)"
             ></button>
             <button
               pButton
@@ -68,7 +77,8 @@
               icon="pi pi-trash"
               class="p-button-rounded p-button-danger p-button-outlined mr-3"
               pTooltip="Delete Activity"
-              (click)="deleteActivity(activity._id)"
+              tooltipPosition="top"
+              (click)="deleteActivity(activity.id)"
             ></button>
           </td>
         </tr>
