--- a/src/app/pages/view-activity/view-activity.component.html
+++ b/src/app/pages/view-activity/view-activity.component.html
@@ -16,10 +16,10 @@
             ></button>
           </div>
           <div class="mr-8 text-center">
-            <div class="font-medium text-2xl text-900 mb-3">
+            <div class="font-medium text-2xl text-900">
               {{ activityDetial?.uploader_id.name }}
             </div>
-            <div class="text-700 mb-5">
+            <div class="text-700 mb-2">
               ( {{ activityDetial?.uploader_id.roll_no }} |
               {{ activityDetial?.uploader_id.year }} )
             </div>
