--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -89,7 +89,7 @@
           label="Change My Password"
           icon="pi pi-refresh"
           class="p-button-raised"
-          (click)="openChangePasswordDialog()"
+          (click)="openChangePasswordDialog = !openChangePasswordDialog"
         ></button>
       </div>
     </div>
@@ -105,7 +105,7 @@
           label="Change My Password"
           icon="pi pi-refresh"
           class="p-button-raised"
-          (click)="openChangePasswordDialog()"
+          (click)="openChangePasswordDialog = !openChangePasswordDialog"
         ></button>
       </div>
       <div class="button">
@@ -116,7 +116,7 @@
           label="Add Mentor"
           icon="pi pi-plus"
           class="p-button-raised p-button-success"
-          (click)="openDialog = !openDialog"
+          (click)="openAddAdminDialog = !openAddAdminDialog"
         ></button>
       </div>
       <div class="button">
@@ -148,7 +148,7 @@
 <!-- Add Admin section -->
 <p-dialog
   header="You can add admin/mentor here"
-  [(visible)]="openDialog"
+  [(visible)]="openAddAdminDialog"
   [modal]="true"
   [style]="{ width: '35vw' }"
   [draggable]="false"
@@ -228,4 +228,108 @@
       *ngIf="isLoading"
     ></p-progressSpinner>
   </ng-template>
+</p-dialog>
+
+<!-- Change old Password Dialog -->
+<p-dialog
+  header="Enter your old password"
+  [(visible)]="openChangePasswordDialog"
+  [modal]="true"
+  [style]="{ width: '25vw' }"
+  [draggable]="false"
+  [resizable]="false"
+>
+  <form
+    #oldPassForm="ngForm"
+    (ngSubmit)="checkOldPass(oldPassForm)"
+    class="w-8 m-auto mt-4"
+  >
+    <div class="grid formgrid p-fluid">
+      <div class="field col-12 mb-4">
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-eye"></i></span>
+          <input
+            type="password"
+            pInputText
+            name="password"
+            ngModel
+            placeholder="Current Password"
+            autofocus
+            required
+          />
+        </div>
+      </div>
+      <div class="col-12 text-center">
+        <button
+          pButton
+          pRipple
+          [disabled]="oldPassForm.invalid"
+          class="mt-3"
+          label="Check"
+          *ngIf="!isLoading"
+        ></button>
+        <p-progressSpinner
+          [style]="{ width: '50px', height: '50px' }"
+          styleClass="custom-spinner"
+          strokeWidth="8"
+          fill="var(--surface-ground)"
+          animationDuration=".5s"
+          class="mt-3"
+          *ngIf="isLoading"
+        ></p-progressSpinner>
+      </div>
+    </div>
+  </form>
+</p-dialog>
+
+<!-- Changenew Password Dialog -->
+<p-dialog
+  header="Enter your new password"
+  [(visible)]="openNewPasswordDialog"
+  [modal]="true"
+  [style]="{ width: '25vw' }"
+  [draggable]="false"
+  [resizable]="false"
+>
+  <form
+    #newPassForm="ngForm"
+    (ngSubmit)="changeNewPass(newPassForm)"
+    class="w-8 m-auto mt-4"
+  >
+    <div class="grid formgrid p-fluid">
+      <div class="field col-12 mb-4">
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-eye"></i></span>
+          <input
+            type="password"
+            pInputText
+            name="password"
+            ngModel
+            placeholder="New Password"
+            autofocus
+            required
+          />
+        </div>
+      </div>
+      <div class="col-12 text-center">
+        <button
+          pButton
+          pRipple
+          [disabled]="newPassForm.invalid"
+          class="mt-3"
+          label="Save"
+          *ngIf="!isLoading"
+        ></button>
+        <p-progressSpinner
+          [style]="{ width: '50px', height: '50px' }"
+          styleClass="custom-spinner"
+          strokeWidth="8"
+          fill="var(--surface-ground)"
+          animationDuration=".5s"
+          class="mt-3"
+          *ngIf="isLoading"
+        ></p-progressSpinner>
+      </div>
+    </div>
+  </form>
 </p-dialog>
