Changed view Activiy size

--- a/src/app/pages/view-activity/view-activity.component.html
+++ b/src/app/pages/view-activity/view-activity.component.html
@@ -116,14 +116,14 @@
       <div class="col-12 md:col-4 flex align-items-center">
         <img
           [src]="activityDetial?.image"
-          [height]="360"
-          class="block lg:hidden"
+          [width]="300"
+          class="block xl:hidden"
           alt="Certificate"
         />
         <img
           [src]="activityDetial?.image"
-          [height]="500"
-          class="hidden lg:block"
+          [width]="450"
+          class="hidden xl:block"
           alt="Certificate"
         />
       </div>
