Added show admin table

--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -127,7 +127,7 @@
           label="Show All Mentor"
           icon="pi pi-users"
           class="p-button-raised p-button-warning"
-          [routerLink]="['show-all-mentors']"
+          [routerLink]="['/m/show-all-m']"
         ></button>
       </div>
       <div class="button">
